--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -192,7 +192,7 @@
                                 data-target="#mentorship-posts-create-modal">Mentorship Post
                         </button>
                         <button class="btn nav-create-button dropdown-item bg-dark" id="dash-nav-job-posts-create" data-toggle="modal"
-                                data-target="#job-postings-create-modal">Job Posting
+                                data-target="#job-postings-create-modal">Job Post
                         </button>
                         <button class="btn nav-create-button dropdown-item bg-dark" id="dash-nav-whiteboard-questions-create" data-toggle="modal"
                                 data-target="#whiteboard-questions-create-modal">Whiteboard Question
