made recomended changes

--- a/src/main/resources/templates/interview-questions/show.html
+++ b/src/main/resources/templates/interview-questions/show.html
@@ -49,19 +49,19 @@
 <!--    <a id="interview-question-round-button" th:href="@{|/api/interview-questions|}">Question Round</a>-->
 </div>
 
-<form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="search" name="searchString" placeholder="Search" aria-label="Search">
-    <select class="custom-select" id="select-sort" name="by">
-        <option selected disabled value="highestRating">Sort Results By</option>
-        <option value="highestRating">Highest Rating</option>
-        <option value="lowestRating">Lowest Rating</option>
-        <option value="titleAsc">Title Ascending</option>
-        <option value="titleDesc">Title Descending</option>
-        <option value="newest">Most Recent</option>
-        <option value="oldest">Oldest</option>
-    </select>
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-</form>
+<!--<form class="form-inline my-2 my-lg-0">-->
+<!--    <input class="form-control mr-sm-2" type="search" name="searchString" placeholder="Search" aria-label="Search">-->
+<!--    <select class="custom-select" id="select-sort" name="by">-->
+<!--        <option selected disabled value="highestRating">Sort Results By</option>-->
+<!--        <option value="highestRating">Highest Rating</option>-->
+<!--        <option value="lowestRating">Lowest Rating</option>-->
+<!--        <option value="titleAsc">Title Ascending</option>-->
+<!--        <option value="titleDesc">Title Descending</option>-->
+<!--        <option value="newest">Most Recent</option>-->
+<!--        <option value="oldest">Oldest</option>-->
+<!--    </select>-->
+<!--    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>-->
+<!--</form>-->
 <br>
 <div class="container post-container">
     <!--    POST FILLING BEGINS HERE-->
