--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -5,9 +5,14 @@
 <body>
 <section class="jumbotron text-center">
     <div class="container">
-
+        <div class="d-flex h-100 text-center align-items-center ">
+            <div class="w-100 ">
+                <h1 class="display-1" style="color: #00727F"; id="logo">CodeOn</h1>
+            </div>
+    </div>
     </div>
 </section>
+
 <div class="container">
     <div class="row">
         <div class="col-md-4">
