--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -14,7 +14,7 @@
 <!--    <div class="card register-mainBox">-->
         <div class="card-body" id="box">
             <!--            input name email username password and bio-->
-            <h1 class="text-center">Register your account</h1>
+            <h1 class="text-center">Register</h1>
             <label for="firstName">First Name</label>
             <input id="firstName" class="form-control" th:field="*{firstName}"/>
             <label for="lastName">Last Name</label>
