--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -53,3 +53,13 @@
 #index-end-register:hover{
     color: #189cb1;
 }
+
+@media only screen and (max-width: 600px) {
+.landlogo{
+    display: none;
+}
+    #box{
+        margin-right: 10%;
+        margin-left: 10%;
+    }
+}
