--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header.html :: header(title = 'About Us')">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head>
+    <th:block th:include="fragments/header.html :: header(title = 'About Us')"/>
+    <meta sec:authorize="isAuthenticated()" class="talkJSAppId" th:content="${talkJSAppId}"/>
+    <meta sec:authorize="isAuthenticated()" class="filestackKey" th:content="${filestackKey} "/>
+    <meta sec:authorize="isAuthenticated()" class="quotesKey" th:content="${quotesKey}"/>
 </head>
 <body>
+<nav th:replace="fragments/navbar.html :: navbar"></nav>
 <section class="jumbotron text-center">
     <div class="container">
-
     </div>
 </section>
 <div class="container">
@@ -51,6 +55,8 @@
         </div>
     </div>
 </div>
+<div sec:authorize="isAuthenticated()" th:replace="fragments/chat-box.html :: chat-box"></div>
 <div th:replace="fragments/body-scripts.html :: body-scripts"></div>
+<div sec:authorize="isAuthenticated()" th:replace="fragments/chat-scripts.html :: chat-scripts"></div>
 </body>
 </html>
