--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -93,7 +93,7 @@ body, html {
     padding-bottom: 5px;
 }
 
-.start-button, .show-answer-button, .next-question-button {
+.start-button, .show-answer-button, .next-question-button, .profile-button {
     text-align: center;
     color: #E3E7D3;
     font-size: 20px;
@@ -103,6 +103,17 @@ body, html {
     margin: 20px 10px;
     padding-top: 3px;
     padding-bottom: 5px;
+}
+
+.profile-button {
+    text-align: center;
+    color: #E3E7D3;
+    font-size: 20px;
+    border: 2px solid #E3E7D3;
+    border-radius: 3px;
+    background-color: #0f6674;
+    margin: 20px 10px;
+    padding: 3px 8px 5px;
 }
 
 .question-round-container {
