--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -245,6 +245,18 @@ header {
     text-decoration: none !important;
 }
 
+#search-button{
+    width: 6rem;
+    text-align: center;
+    color: #E3E7D3;
+    font-size: 20px;
+    border: 2px solid #E3E7D3;
+    border-radius: 3px;
+    background-color: #0f6674;
+    padding-top: 3px;
+    padding-bottom: 5px;
+}
+
 
 @media only screen and (max-width: 600px) {
     .parallax2{
